--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <h1 class="heading">Capitals</h1>
-    <h2 class="heading">London</h2>
+    <h1 class="red heading">Capitals</h1>
+    <h2 class="heading" id="london-heading">London</h2>
     <p>London is capital of England.</p>
     <h2 class="heading">Paris</h2>
     <p class="paris-para">Paris is capital of France.</p>
