--- a/index.html
+++ b/index.html
@@ -2,13 +2,30 @@
 <html lang="en">
   <head>
     <title>week5</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <h1 class="red heading">Capitals</h1>
+    <h1 id="capitals-heading" class="red heading">Capitals</h1>
+    <p><a href="#ottawa">Jump to Ottawa</a></p>
+
     <h2 class="heading" id="london-heading">London</h2>
     <p>London is capital of England.</p>
     <h2 class="heading">Paris</h2>
     <p class="paris-para">Paris is capital of France.</p>
+    <h2>Rome</h2>
+    <p>Rome is capital of Italy.</p>
+
+    <h2>Madrid</h2>
+    <p>Madrid is capital of Spain.</p>
+
+    <h2 id="ottawa">Ottawa</h2>
+    <p>Ottawa is capital of Canada.</p>
+
+    <p>Go to the <a href="#capitals-heading">top</a></p>
+    <a
+      href="https://developer.mozilla.org/en-US/docs/Web/CSS/margin#formal_syntax"
+      >MDN</a
+    >
+    <p>The typical filler text is the <span>Lorem Ipsum</span>.</p>
   </body>
 </html>
