box model practice on paragraph with span

--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
       href="https://developer.mozilla.org/en-US/docs/Web/CSS/margin#formal_syntax"
       >MDN</a
     >
-    <p>The typical filler text is the <span>Lorem Ipsum</span>.</p>
+    <p class="para-with-span">The typical filler text is the <span class="filler-span">Lorem Ipsum</span>.</p>
   </body>
 </html>
